--- a/base/css/is.css
+++ b/base/css/is.css
@@ -402,6 +402,85 @@
   height: 24.6rem;
   padding: 2rem 1rem;
 }
+.stats-container .divide-2 {
+  overflow-y: auto;
+  margin-top: 2.1rem;
+}
+.stats-container .divide-2.title-none {
+  overflow-y: visible;
+  height: auto;
+  margin-top: 1rem;
+}
+.stats-container .divide-2.title-none > ul {
+  overflow-y: auto;
+  height: 40.8rem;
+}
+.stats-container .divide-2 li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 1rem;
+}
+.stats-container .divide-2 li .chart-wrap {
+  width: 86.3rem;
+  height: 40.8rem;
+  padding: 1.4rem 3rem;
+  border-radius: 0.5rem;
+  background: #fff;
+  -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.05);
+          box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.05);
+}
+.stats-container .divide-2 li .chart-wrap h3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 0 0.5rem;
+  margin-bottom: 1rem;
+  line-height: 1.9rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+.stats-container .divide-2 li .chart-wrap h3::before {
+  content: "";
+  width: 0.9rem;
+  height: 0.9rem;
+}
+.stats-container .divide-2 li .chart-wrap:nth-child(1) h3::before {
+  background: #5350dd;
+}
+.stats-container .divide-2 li .chart-wrap:nth-child(2) h3::before {
+  background: #50ddd5;
+}
+.stats-container .divide-2 li .chart-wrap .chart-container {
+  width: 80.2rem;
+  height: 35.2rem;
+}
 .stats-container .divide-4 {
   overflow-y: auto;
   height: 44rem;
@@ -1787,7 +1866,7 @@
   bottom: 0;
   left: 42.2rem;
   right: 0;
-  z-index: 1;
+  z-index: 5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1821,7 +1900,7 @@
   top: 0;
   bottom: 0;
   right: 0;
-  z-index: 1;
+  z-index: 6;
   width: calc(100% - 42.2rem);
   height: auto;
 }
