--- a/base/css/style.css
+++ b/base/css/style.css
@@ -59,6 +59,7 @@ img {
 button {
   width: 100%;
   border: 0;
+  outline: 0;
   font-family: Pretendard, Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
   background: transparent;
   cursor: pointer;
@@ -1778,60 +1779,442 @@ body ::-webkit-scrollbar-track {
 }
 
 /* 지도에서 사용하는 UI */
-.map-type {
-  overflow: hidden;
+.map-iconbar-container {
   position: absolute;
-  top: 1.8rem;
-  right: 1.9rem;
+  top: 2rem;
   z-index: 4;
+  width: 4.2rem;
+}
+.map-iconbar-container.pos-right1 {
+  right: 2rem;
+}
+.map-iconbar-container.pos-right2 {
+  right: 6.7rem;
+}
+.map-iconbar-container.pos-right3 {
+  right: 11.4rem;
+}
+.map-iconbar-container.open .map-icon-list {
+  display: block;
+}
+.map-iconbar-container.open .btn-display span {
+  background-color: #ebf8ff;
+  background-image: url(/base/images/map-right-iconbar/icon_map_hover.png);
+}
+.map-iconbar-container button {
+  display: block;
+  width: 100%;
+  height: 4.2rem;
+  padding: 0.3rem;
+}
+.map-iconbar-container button span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.3rem;
+}
+.map-iconbar-container button em {
+  margin-top: 0.2rem;
+}
+.map-iconbar-container .btn-display {
+  background: #fff;
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.15);
+          box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 0.5rem;
+}
+.map-iconbar-container .btn-display span {
+  background-image: url(/base/images/map-right-iconbar/icon_map.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: 2.2rem 2.1rem;
+}
+.map-iconbar-container .btn-display span:hover {
+  background-image: url(/base/images/map-right-iconbar/icon_map_hover.png);
+}
+.map-iconbar-container .btn-display.ic1 span {
+  background-image: url(/base/images/map-right-iconbar/iconbar1_hover.png);
+  background-size: 50% auto;
+  background-color: #ebf8ff;
+}
+.map-iconbar-container .btn-display.ic2 span {
+  background-image: url(/base/images/map-right-iconbar/iconbar2_hover.png);
+  background-size: 50% auto;
+  background-color: #ebf8ff;
+}
+.map-iconbar-container .btn-display.ic3 span {
+  background-image: url(/base/images/map-right-iconbar/iconbar3_hover.png);
+  background-size: 50% auto;
+  background-color: #ebf8ff;
+}
+.map-iconbar-container .btn-display.ic4 span {
+  background-image: url(/base/images/map-right-iconbar/iconbar4_hover.png);
+  background-size: 40% auto;
+  background-color: #ebf8ff;
+}
+.map-iconbar-container .map-icon-list {
+  display: none;
+  margin-top: 0.4rem;
+  border-radius: 0.5rem;
+  background: #fff;
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.15);
+          box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.15);
+}
+.map-iconbar-container .map-icon-list button span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  border-radius: 0.5rem;
-  -webkit-box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.map-type input {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 0;
-  height: 0;
-  opacity: 0;
+.map-iconbar-container .map-icon-list button span::before {
+  content: "";
 }
-.map-type input:checked + span {
-  color: #fff;
-  background: #0993ce;
-}
-.map-type label span {
-  display: block;
-  padding: 0.5rem 1.25rem;
-  line-height: 100%;
-  font-size: 1.2rem;
-  font-weight: 500;
+.map-iconbar-container .map-icon-list button em {
+  margin-top: 0.2rem;
   color: #727272;
-  background: #fff;
-  -webkit-transition: background 0.2s;
-  transition: background 0.2s;
+  font-size: 1rem;
+  font-weight: 500;
+}
+.map-iconbar-container .map-icon-list button:hover em {
+  color: #03a0fc;
+}
+.map-iconbar-container .map-icon-list .ic1 span::before {
+  width: 1.3rem;
+  height: 1.7rem;
+  background-image: url("/base/images/map-right-iconbar/iconbar1.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container .map-icon-list .ic1.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container .map-icon-list .ic1.active span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar1_hover.png);
+}
+.map-iconbar-container .map-icon-list .ic1.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container .map-icon-list .ic1:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar1_hover.png);
+}
+.map-iconbar-container .map-icon-list .ic2 span::before {
+  width: 1.7rem;
+  height: 1.65rem;
+  background-image: url("/base/images/map-right-iconbar/iconbar2.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container .map-icon-list .ic2.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container .map-icon-list .ic2.active span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar2_hover.png);
+}
+.map-iconbar-container .map-icon-list .ic2.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container .map-icon-list .ic2:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar2_hover.png);
+}
+.map-iconbar-container .map-icon-list .ic3 span::before {
+  width: 1.6rem;
+  height: 1.6rem;
+  background-image: url("/base/images/map-right-iconbar/iconbar3.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container .map-icon-list .ic3.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container .map-icon-list .ic3.active span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar3_hover.png);
+}
+.map-iconbar-container .map-icon-list .ic3.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container .map-icon-list .ic3:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar3_hover.png);
+}
+.map-iconbar-container .map-icon-list .ic4 span::before {
+  width: 0.85rem;
+  height: 1.6rem;
+  background-image: url("/base/images/map-right-iconbar/iconbar4.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container .map-icon-list .ic4.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container .map-icon-list .ic4.active span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar4_hover.png);
+}
+.map-iconbar-container .map-icon-list .ic4.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container .map-icon-list .ic4:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar4_hover.png);
+}
+.map-iconbar-container.map-selection.open .btn-display span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection1_hover.png);
+}
+.map-iconbar-container.map-selection.open .btn-display em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-selection .btn-display span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  background-image: none;
+}
+.map-iconbar-container.map-selection .btn-display span::before {
+  content: "";
+  width: 1.8rem;
+  height: 1.8rem;
+  background-image: url("/base/images/map-right-iconbar/map_selection1.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container.map-selection .btn-display:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection1_hover.png);
+}
+.map-iconbar-container.map-selection .btn-display:hover em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-selection .btn-display.ic1 span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection1_hover.png);
+}
+.map-iconbar-container.map-selection .btn-display.ic1 em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-selection .btn-display.ic2 span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection2_hover.png);
+}
+.map-iconbar-container.map-selection .btn-display.ic2 em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-selection .btn-display.ic3 span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection3_hover.png);
+}
+.map-iconbar-container.map-selection .btn-display.ic3 em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-selection .map-icon-list .ic1 span::before {
+  width: 1.8rem;
+  height: 1.8rem;
+  background-image: url("/base/images/map-right-iconbar/map_selection1.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container.map-selection .map-icon-list .ic1.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-selection .map-icon-list .ic1.active span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection1_hover.png);
+}
+.map-iconbar-container.map-selection .map-icon-list .ic1.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-selection .map-icon-list .ic1:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection1_hover.png);
+}
+.map-iconbar-container.map-selection .map-icon-list .ic2 span::before {
+  width: 1.8rem;
+  height: 1.8rem;
+  background-image: url("/base/images/map-right-iconbar/map_selection2.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container.map-selection .map-icon-list .ic2.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-selection .map-icon-list .ic2.active span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection2_hover.png);
+}
+.map-iconbar-container.map-selection .map-icon-list .ic2.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-selection .map-icon-list .ic2:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection2_hover.png);
+}
+.map-iconbar-container.map-selection .map-icon-list .ic3 span::before {
+  width: 1.8rem;
+  height: 1.8rem;
+  background-image: url("/base/images/map-right-iconbar/map_selection3.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container.map-selection .map-icon-list .ic3.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-selection .map-icon-list .ic3.active span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection3_hover.png);
+}
+.map-iconbar-container.map-selection .map-icon-list .ic3.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-selection .map-icon-list .ic3:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/map_selection3_hover.png);
+}
+.map-iconbar-container.map-cw .btn-display.ic1 span {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection1_hover.png);
+  background-size: 50% auto;
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-cw .btn-display.ic2 span {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection2_hover.png);
+  background-size: 50% auto;
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-cw .btn-display.ic3 span {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection3_hover.png);
+  background-size: 65% auto;
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-cw .btn-display.ic4 span {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection4_hover.png);
+  background-size: 65% auto;
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-cw .btn-display.ic5 span {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection5_hover.png);
+  background-size: 65% auto;
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic1 span::before {
+  width: 1.8rem;
+  height: 1.3rem;
+  background-image: url("/base/images/map-right-iconbar/iconbar_intersection1.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic1.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic1.active span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection1_hover.png);
+}
+.map-iconbar-container.map-cw .map-icon-list .ic1.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic1:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection1_hover.png);
+}
+.map-iconbar-container.map-cw .map-icon-list .ic2 span::before {
+  width: 1.3rem;
+  height: 1.7rem;
+  background-image: url("/base/images/map-right-iconbar/iconbar_intersection2.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic2.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic2.active span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection2_hover.png);
+}
+.map-iconbar-container.map-cw .map-icon-list .ic2.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic2:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection2_hover.png);
+}
+.map-iconbar-container.map-cw .map-icon-list .ic3 span::before {
+  width: 2.4rem;
+  height: 1rem;
+  background-image: url("/base/images/map-right-iconbar/iconbar_intersection3.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic3.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic3.active span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection3_hover.png);
+}
+.map-iconbar-container.map-cw .map-icon-list .ic3.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic3:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection3_hover.png);
+}
+.map-iconbar-container.map-cw .map-icon-list .ic4 span::before {
+  width: 1.8rem;
+  height: 0.8rem;
+  background-image: url("/base/images/map-right-iconbar/iconbar_intersection4.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic4.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic4.active span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection4_hover.png);
+}
+.map-iconbar-container.map-cw .map-icon-list .ic4.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic4:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection4_hover.png);
+}
+.map-iconbar-container.map-cw .map-icon-list .ic5 span::before {
+  width: 2rem;
+  height: 0.8rem;
+  background-image: url("/base/images/map-right-iconbar/iconbar_intersection5.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic5.active span {
+  background-color: #ebf8ff;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic5.active span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection5_hover.png);
+}
+.map-iconbar-container.map-cw .map-icon-list .ic5.active span em {
+  color: #03a0fc;
+}
+.map-iconbar-container.map-cw .map-icon-list .ic5:hover span::before {
+  background-image: url(/base/images/map-right-iconbar/iconbar_intersection5_hover.png);
 }
 
 .ui.dropdown.area-box {
   all: initial;
   position: absolute;
-  top: 4.8rem;
-  right: 1.9rem;
+  top: 2rem;
   z-index: 4;
   min-width: 15.4rem;
   padding: 0.8rem 3rem 0.8rem 0.8rem;
@@ -1845,6 +2228,15 @@ body ::-webkit-scrollbar-track {
   cursor: pointer;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+.ui.dropdown.area-box.pos-right1 {
+  right: 2rem;
+}
+.ui.dropdown.area-box.pos-right2 {
+  right: 6.7rem;
+}
+.ui.dropdown.area-box.pos-right3 {
+  right: 11.4rem;
 }
 .ui.dropdown.area-box.active::after {
   top: calc(50% - 0.55rem);
